force-app/main/default/objects/Stg_Calendar__c.object
<CustomObject>
    <fields>
        <fullName>Calendar_Code__c</fullName>
        <formula>IF(ISBLANK(TEXT( Sequence_Number_Year__c )), TEXT( Sequence_Number__c ),  TEXT(Sequence_Number_Year__c) + &apos;_&apos; + TEXT( Sequence_Number__c ) )</formula>
        <label>Calendar Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Name_Alternate__c</fullName>
        <formula>Year__c + &apos;/&apos; + Type_Alt__c</formula>
        <label>Calendar Name Alternate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Calendar Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADMISSION</fullName>
                </value>
                <value>
                    <fullName>TEACHING</fullName>
                </value>
                <value>
                    <fullName>ASSESSMENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_Transformation__c</fullName>
        <formula>IF(  ISBLANK( Description__c )  ,  Year__c + &apos; &apos; +  Type_Description__c , Description__c )</formula>
        <label>Calendar Description Transformation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Calendar Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <label>Job Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Status__c</fullName>
        <label>Record Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Number_Year__c</fullName>
        <label>Sequence Number Year</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PLANNED</fullName>
                </value>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>INACTIVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Alt__c</fullName>
        <label>Calendar Type Alternate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Description__c</fullName>
        <label>Calendar Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Calendar Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Calendar Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Stg Calendar</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Year__c</columns>
        <columns>Job_Code__c</columns>
        <columns>Calendar_Code__c</columns>
        <columns>Type_Alt__c</columns>
        <columns>Record_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Calendar</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stg Calendars</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>